zone-alloc-strong-handle-derive/tests/ui/too_many_fields.rs
use zone_alloc::Handle;
use zone_alloc_strong_handle_derive::StrongHandle;

#[derive(StrongHandle)]
struct IntegerHandle(Handle, bool);

fn main() {}
